--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,8 +17,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install MkDocs
-        run: pip install mkdocs-material mkdocs-awesome-pages-plugin
+      - name: Install MkDocs toolchain
+        run: |
+          python -m pip install --upgrade pip
+          pip install mkdocs-material mkdocs-awesome-pages-plugin mdformat
+      - name: Markdown lint
+        run: git ls-files '*.md' | xargs mdformat --check
       - name: Build documentation
         run: mkdocs build --strict
 
