--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,16 @@ dependencies = [
   "rich",
 ]
 
+[project.optional-dependencies]
+test = [
+  "pytest>=8.0",
+  "pytest-cov>=5.0",
+]
+docs = [
+  "mdformat>=0.7",
+  "pre-commit>=3.5",
+]
+
 [project.scripts]
 pdfsuite = "pdfsuite.__main__:app"
 
@@ -18,6 +28,13 @@ line-length = 100
 
 [tool.isort]
 profile = "black"
+
+[tool.pytest.ini_options]
+addopts = "--cov=pdfsuite --cov-report=term-missing --cov-fail-under=60"
+testpaths = ["tests"]
+
+[tool.setuptools.packages.find]
+include = ["pdfsuite*"]
 
 [build-system]
 requires = ["setuptools>=61.0"]
