--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,3 +82,50 @@ jobs:
           if (-not (Test-Path $first)) { exit 1 }
           if (-not (Test-Path $second)) { exit 1 }
           if ((Get-Item $first).Length -eq 0 -or (Get-Item $second).Length -eq 0) { exit 1 }
+
+  gui-smoke-linux:
+    runs-on: ubuntu-latest
+    needs: lint-test
+    env:
+      QTWEBENGINE_DISABLE_SANDBOX: "1"
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install system deps
+        run: sudo apt-get update && sudo apt-get install -y xvfb
+      - uses: actions/setup-python@v5
+        with:
+            python-version: '3.11'
+      - name: Install GUI deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[gui]
+      - name: Headless GUI smoke
+        run: xvfb-run --auto-servernum python -m gui.main --check
+
+  gui-pyinstaller:
+    runs-on: ubuntu-latest
+    needs: gui-smoke-linux
+    env:
+      QTWEBENGINE_DISABLE_SANDBOX: "1"
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+      - name: Install build deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .[gui]
+          pip install pyinstaller
+      - name: Build PyInstaller bundle
+        run: |
+          pyinstaller gui/main.py \
+            --name pdfsuite-gui \
+            --noconfirm \
+            --collect-all gui \
+            --collect-all pdfsuite
+      - name: Upload GUI artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pdfsuite-gui-linux
+          path: dist/pdfsuite-gui
